text blocks related fixes