@@ -24,6 +24,7 @@ import com.sun.source.tree.Tree;
 import com.sun.source.tree.Tree.Kind;
 import com.sun.source.util.TreePath;
 import java.util.List;
+import org.netbeans.api.java.queries.CompilerOptionsQuery;
 import org.netbeans.api.java.source.CompilationInfo;
 import org.netbeans.spi.editor.hints.ErrorDescription;
 import org.netbeans.spi.editor.hints.Fix;
@@ -36,7 +37,8 @@ import org.netbeans.spi.java.hints.TriggerPattern;
 import org.netbeans.spi.java.hints.TriggerTreeKind;
 import org.openide.util.NbBundle.Messages;
 
-@Hint(displayName = "#DN_ConvertToTextBlock", description = "#DESC_ConvertToTextBlock", category = "general")
+@Hint(displayName = "#DN_ConvertToTextBlock", description = "#DESC_ConvertToTextBlock", category="rules15",
+      minSourceVersion = "13")
 @Messages({
     "DN_ConvertToTextBlock=Convert to Text Block",
     "DESC_ConvertToTextBlock=Convert to Text Block"
@@ -46,6 +48,8 @@ public class ConvertToTextBlock {
     @TriggerTreeKind(Kind.PLUS)
     @Messages("ERR_ConvertToTextBlock=Can be converted to text block")
     public static ErrorDescription computeWarning(HintContext ctx) {
+        if (!CompilerOptionsQuery.getOptions(ctx.getInfo().getFileObject()).getArguments().contains("--enable-preview"))
+            return null;
         if (ctx.getPath().getParentPath() != null && getTextOrNull(ctx.getPath().getParentPath()) != null) {
             return null;
         }
